# gb-emu

./: .gitignore  CLAUDE.md  Cargo.toml  MBC_ANALYSIS.md  NEXT_STEPS_SUMMARY.md  PHASE2_DEBUG_PLAN.md  PHASE2_STATUS.md  PLAN.md  README.md  ROADMAP.md  TODO.md
src/: main.rs
src/gb/: cartridge.rs  cpu.rs  debug.rs  debugger.rs  gameboy.rs  gb.rs  instruction.rs  interconnect.rs  joypad.rs  memory.rs  mod.rs  opcode.rs  ppu.rs  register.rs  timer.rs
src/gb/cpu/: alu.rs  cb_ops.rs  mod.rs  operands.rs  tests.rs
src/gb/debugger/: core.rs  mod.rs  tui.rs
src/gb/mbc/: mbc0.rs  mbc1.rs  mod.rs  traits.rs
