[package]
name = "rust-gb-emu"
version = "0.0.1"
authors = ["iker <ikerlb95@ciencias.unam.mx>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.4"
ratatui = "0.27"
crossterm = "0.27"
tui-textarea = "0.5"
minifb = "0.27"